# Personal_VAE_SingleCellRNASeq

./: .gitignore  README.md
CVAE/: cvae.py  submit_train_CVAE.sh  train_CVAE.py
CVAE/cf_discriminator/config/: discriminator_config.yaml
CVAE/cf_discriminator/model/: discriminator_model.py
CVAE/configs/: train_human_cvae.yaml
CVAE/dataloader/: preloader.py
CVAE/models/: conditional_vae.py
CVAE/preprocessed_data/: human_vocab_dict.pkl
CVAE/scripts/: sample_slurm_submission.sh  slurm_run_cvae_human.sh  slurm_submission_script.sh  vocab_builder.py
CVAE/training/: trainer.py
CVAE/utils/: chunk_sparsity_accumulator.py  config_validation.py  logging_helpers.py
DAE/: dae.py  submit_train_DAE.sh  train_DAE.py
Legacy/DAE/: dae.py  train_DAE.py
Legacy/GeeksForGeeksAE/: AE.py
Legacy/dataLoader/: pkl_previewer.py
cpp_CVAE/: CMakeLists.txt  mental_model.txt
cpp_CVAE/core_nightly/Layers/: Layer.h  Layer_all.h  LinearLayer.h  LinearLayer.tpp  RELU.h  param_init_utils.h
cpp_CVAE/core_nightly/Layers/Activation_Layers/: RELU.h  RELU.tpp  sigmoid.h  sigmoid.tpp
cpp_CVAE/core_nightly/Loss/: Loss.h  MSE.h  MSE.tpp  loss_functions.h  loss_functions.tpp
cpp_CVAE/core_nightly/Module/: Module.h  Module.tpp
cpp_CVAE/core_nightly/Optimizer/: Adam.h  Adam.tpp  Optimizer.h  Optimizer_all.h
cpp_CVAE/core_nightly/PoC_trainer/: main.cpp  trainer.h
cpp_CVAE/core_nightly/Training/: BatchCreator.h  BatchCreator.tpp  Trainer.h  Trainer.tpp
cpp_CVAE/core_nightly/exec/: main.cpp
cpp_CVAE/core_nightly/utils/: custom_types.h  generate_file_lists.cpp  get_ChunkExprCSR_from_npz.tpp  utils_all.h
cpp_CVAE/front_end_nightly/: example_config.h  example_config.yaml  fix_fuckass_config_include_errors.sh  generate_config_hpp.py  single_chunk_loader.py
cpp_CVAE/front_end_nightly/config/: example_config.h  example_config.yaml  generate_config_hpp.py  supported_types.py
cpp_CVAE/front_end_nightly/exec/: compile_and_train.py
dataLoader/: collateVisualizer.py  data_loader_class.py  fafoDatasetClass.py  npz_previewer.py  sample_per_chunk_dataloader_example.py  single_chunk_dataset.py  submit_test_dataloader.sh  test_datalaoder.py  test_dataloader.py
metadataAnalysis/: maxUniqVals-bitsPerCatagory-dtype.txt
metadataAnalysisFAFO/: dType-examples-nnz.txt  fafo.ipynb  perFile-unique-vals.txt
mheaded_c_vae/configs/: sample_training_config.yaml
mheaded_c_vae/dataloader/: chunks_dataset.py  loader.py  preloader.py  single_chunk_dataset.py
mheaded_c_vae/models/: conditional_vae.py
mheaded_c_vae/scripts/: slurm_run_cvae_human.sh  vocab_builder.py
mheaded_c_vae/training/: train.py  trainer.py
mheaded_c_vae/utils/: chunk_sparsity_accumulator.py  config_parser.py  logging_helpers.py  loss_helpers.py
(+25 files in other folders)
